--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "Polygon/lib/forge-std"]
-	path = Polygon/lib/forge-std
+[submodule "polygon/lib/forge-std"]
+	path = polygon/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule "lib/forge-std"]
 	branch = v1.5.2
